# usbapi-rs

./: .gitignore  Cargo.toml  LICENSE  changelog.md  readme.md
examples/: enumerate.rs  read_strings.rs  stm32.rs
src/: control_transfer.rs  endpoint.rs  lib.rs  main.rs  usb_transfer.rs
src/descriptors/: configuration.rs  descriptor.rs  device.rs  endpoint.rs  interface.rs  mod.rs
src/os/: linuxusbfs.rs  mod.rs
src/os/linux/: constants.rs  enumerate.rs  mio.rs  mod.rs  usb_device.rs  usbfs.rs  usbfsurb.rs
