[package]
name = "usbapi"
version = "0.1.1"
authors = ["Mikael Hermansson <mikael.hermansson@mykolab.com>"]
keywords = ["usb", "usbcore", "hardware"]
edition="2018"

[dependencies]
log = "0.4"
libc="0.2"
nix="0.18"
mio = "0.6"
serde={version = '1.0', features=['derive']}
serde-hex="" 
sysfs-serde = "0.2"

[dev-dependencies]
signal-hook = "0.1"
serde_json = "1"
toml = "0.5"
