[package]
name = "usbapi"
version = "0.2.0"
authors = ["Mikael Hermansson <mike7b4@protonmail.com>"]
keywords = ["usb", "usbcore", "hardware"]
edition="2018"
description = "Access USB from Rust"
license = "MIT"
readme = "readme.md"

[dependencies]
log = "0.4"
libc="0.2"
nix="0.18"
serde={version = '1.0', features=['derive']}
serde-hex="" 
sysfs-serde = "0.2"
mio = {version = "0.6", optional = true}

[features]
default = []
mio-support = ["mio"]

[dev-dependencies]
signal-hook = "0.1"
serde_json = "1"
toml = "0.5"

[[example]]
name = "stm32"
required-features = ["mio-support"]
